[gd_scene format=3 uid="uid://cdltdlvu3ok6r"]

[ext_resource type="Script" uid="uid://c4cfmqi26h40w" path="res://Player/player.gd" id="1_gwnis"]
[ext_resource type="Script" uid="uid://dyupldqyre7xm" path="res://Player/player_look.gd" id="2_4ntmi"]
[ext_resource type="Script" uid="uid://b6vu1mmrrmcg7" path="res://Player/player_movement.gd" id="3_btcbx"]
[ext_resource type="PackedScene" uid="uid://nhx18mbvj13o" path="res://Assets/first_person_animations_v2.glb" id="3_gwnis"]
[ext_resource type="Script" uid="uid://8ehx8qutulsk" path="res://Player/arms_animation_control.gd" id="3_k53q1"]
[ext_resource type="Script" uid="uid://bsrtdxxq448s0" path="res://Player/parry_manager.gd" id="6_fhl08"]
[ext_resource type="Resource" uid="uid://bxabapcwrol7i" path="res://Misc/Resources/GroundContact.tres" id="6_vtle1"]
[ext_resource type="Resource" uid="uid://c6n7pya7giofy" path="res://Misc/Resources/Gravity.tres" id="7_gu6f8"]
[ext_resource type="AudioStream" uid="uid://dm8lqcp7xvahm" path="res://Assets/Sounds/normalParry.mp3" id="8_00tjw"]
[ext_resource type="AudioStream" uid="uid://dg5cji4e4lp4b" path="res://Assets/Sounds/perfectParry.mp3" id="9_x3vf3"]
[ext_resource type="Script" uid="uid://ycxd34qryoel" path="res://Player/hud.gd" id="10_x3vf3"]
[ext_resource type="Shader" uid="uid://c7s2rxd036vgv" path="res://Assets/Shaders/black_bars.gdshader" id="11_apopc"]
[ext_resource type="Shader" uid="uid://dirs2l3xmyyp3" path="res://Assets/Shaders/speed_lines.gdshader" id="12_5htga"]
[ext_resource type="PackedScene" uid="uid://bc51ka7ss12sx" path="res://Player/UI/SubathonMeter/subathon_style_meter.tscn" id="13_p5o4e"]
[ext_resource type="Shader" uid="uid://c42badwu1s4cp" path="res://Assets/Shaders/vignette.gdshader" id="15_dkpta"]
[ext_resource type="Script" uid="uid://bllr716ubwgxn" path="res://Player/speedrun_timer.gd" id="16_lfmf2"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_hvfyp"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_5htga"]
shader = ExtResource("11_apopc")
shader_parameter/privot = Vector2(960, 646.87)
shader_parameter/roll = 0.0
shader_parameter/rotate_angle = 0.0
shader_parameter/offset = 0.0

[sub_resource type="FastNoiseLite" id="FastNoiseLite_p5o4e"]
fractal_lacunarity = 1.965
fractal_gain = 0.92

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_gu6f8"]
noise = SubResource("FastNoiseLite_p5o4e")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_dkpta"]
shader = ExtResource("12_5htga")
shader_parameter/noise = SubResource("NoiseTexture2D_gu6f8")
shader_parameter/line_color = Color(1, 1, 1, 1)
shader_parameter/line_count = 2.0
shader_parameter/line_density = 0.242000011495
shader_parameter/line_faloff = 0.25
shader_parameter/mask_size = 0.1
shader_parameter/mask_edge = 0.5
shader_parameter/animation_speed = 20.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_lfmf2"]
shader = ExtResource("15_dkpta")
shader_parameter/inner_radius = 0.42
shader_parameter/outer_radius = 1.0
shader_parameter/vignette_strength = 1.0
shader_parameter/dither_strength = 0.03
shader_parameter/vignette_color = Color(0, 0, 0, 1)

[node name="Player" type="CharacterBody3D" unique_id=559422446 node_paths=PackedStringArray("camera", "inFrontCameraNode")]
script = ExtResource("1_gwnis")
camera = NodePath("CameraRoot/CameraTilt/ViewBobbing/Camera3D")
inFrontCameraNode = NodePath("CameraRoot/CameraTilt/ViewBobbing/Camera3D/InFrontCamera")

[node name="CollisionShape3D" type="CollisionShape3D" parent="." unique_id=27199856]
shape = SubResource("CapsuleShape3D_hvfyp")

[node name="CameraRoot" type="Node3D" parent="." unique_id=2075988183 node_paths=PackedStringArray("playerNode", "camera", "viewBobbingNode", "cameraTiltNode", "fallingDisplacementNode")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.035, 0, -0.18)
script = ExtResource("2_4ntmi")
playerNode = NodePath("..")
camera = NodePath("CameraTilt/ViewBobbing/Camera3D")
viewBobbingNode = NodePath("CameraTilt/ViewBobbing")
cameraTiltNode = NodePath("CameraTilt")
fallingDisplacementNode = NodePath("FallingDisplacement")
fallingTweenTime = 0.8

[node name="CameraTilt" type="Node3D" parent="CameraRoot" unique_id=1903234394]

[node name="ViewBobbing" type="Node3D" parent="CameraRoot/CameraTilt" unique_id=496130392]

[node name="Camera3D" type="Camera3D" parent="CameraRoot/CameraTilt/ViewBobbing" unique_id=272374210]
fov = 80.0

[node name="InFrontCamera" type="Node3D" parent="CameraRoot/CameraTilt/ViewBobbing/Camera3D" unique_id=1864391355]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1.307332)

[node name="FallingDisplacement" type="Node3D" parent="CameraRoot" unique_id=141526293]

[node name="Arms" type="Node3D" parent="CameraRoot/FallingDisplacement" unique_id=622086343 node_paths=PackedStringArray("armsAnimationPlayer")]
transform = Transform3D(-1.705, 0, -1.4905584e-07, 0, 1.705, 0, 1.4905584e-07, 0, -1.705, 0.035, 0, 0.18)
script = ExtResource("3_k53q1")
armsAnimationPlayer = NodePath("first_person_animations_v2/AnimationPlayer")

[node name="first_person_animations_v2" parent="CameraRoot/FallingDisplacement/Arms" unique_id=1054650181 instance=ExtResource("3_gwnis")]

[node name="Skeleton3D" parent="CameraRoot/FallingDisplacement/Arms/first_person_animations_v2/Arms_Rig" parent_id_path=PackedInt32Array(1054650181, 862156670) index="0" unique_id=1008763252]
bones/1/rotation = Quaternion(-0.48333433, -0.38415936, -0.7320739, 0.2878843)
bones/2/rotation = Quaternion(-1.7539136e-08, 1.1953957e-08, -0.7568831, 0.6535503)
bones/3/rotation = Quaternion(0.050190784, 0.17272587, -0.14460105, 0.9730042)
bones/4/rotation = Quaternion(-0.63936913, -8.478675e-09, -3.8759683e-08, 0.7689)
bones/5/rotation = Quaternion(-0.63936913, 6.695892e-08, -4.7496872e-08, 0.7689)
bones/6/rotation = Quaternion(-0.63936913, -5.6037432e-08, 6.830891e-08, 0.7689)
bones/7/rotation = Quaternion(-0.63936913, -2.3315117e-08, -2.245262e-08, 0.7689)
bones/8/rotation = Quaternion(-0.63936913, 6.1052043e-09, -1.0714708e-08, 0.7689)
bones/9/rotation = Quaternion(-0.63936913, 1.4521853e-08, -7.2517743e-09, 0.7689)
bones/10/rotation = Quaternion(-0.63936913, -8.478675e-09, -3.8759683e-08, 0.7689)
bones/11/rotation = Quaternion(-0.63936913, 2.2508367e-08, -7.16636e-09, 0.7689)
bones/12/rotation = Quaternion(-0.63936913, 2.3685073e-08, 1.5643359e-08, 0.7689)
bones/13/rotation = Quaternion(-0.63936913, -8.478675e-09, -3.8759683e-08, 0.7689)
bones/14/rotation = Quaternion(-0.63936913, 2.5456375e-08, 1.3544593e-08, 0.7689)
bones/15/rotation = Quaternion(-0.63936913, 4.8449595e-09, 9.689926e-09, 0.7689)
bones/16/rotation = Quaternion(-0.14691694, 0.53775054, -0.49105018, 0.66940975)
bones/17/rotation = Quaternion(-0.51823425, 1.7423396e-08, -1.524547e-08, 0.85523874)
bones/18/rotation = Quaternion(-0.51823425, 2.269147e-07, -3.226336e-07, 0.85523874)
bones/19/rotation = Quaternion(-0.14691693, 0.5377504, -0.49105042, 0.66940975)
bones/20/rotation = Quaternion(-0.63936913, -1.6957367e-08, -1.2112384e-09, 0.7689)
bones/21/rotation = Quaternion(-0.63936913, -3.93527e-09, -2.7297585e-08, 0.7689)
bones/22/rotation = Quaternion(-0.63936913, -1.6957367e-08, -1.2112384e-09, 0.7689)
bones/23/rotation = Quaternion(-0.63936913, -1.6957367e-08, -1.2112384e-09, 0.7689)
bones/25/position = Vector3(0.7073597, -0.25677955, -0.12643266)
bones/26/position = Vector3(0.28360552, -0.14830701, 0.35733172)
bones/26/rotation = Quaternion(-0.16667143, 0.70203227, 0.59800357, 0.34894583)
bones/27/rotation = Quaternion(-0.3838363, 0.44546556, 0.7401027, 0.32631016)
bones/28/rotation = Quaternion(-1.1849816e-08, 6.546834e-09, 0.76641995, 0.64233994)
bones/29/rotation = Quaternion(0.008740719, 0.010072415, 0.06504276, 0.99779344)
bones/30/rotation = Quaternion(-0.71055305, -1.4322017e-09, 5.5704813e-08, 0.7036436)
bones/31/rotation = Quaternion(-0.71055305, -6.857842e-08, 3.5919143e-08, 0.7036436)
bones/32/rotation = Quaternion(-0.71055305, 2.3208214e-08, -6.2624615e-08, 0.7036437)
bones/33/rotation = Quaternion(-0.71055305, 4.4452033e-09, 3.2092558e-08, 0.7036436)
bones/34/rotation = Quaternion(-0.71055305, -1.574748e-08, -3.9823953e-09, 0.7036436)
bones/35/rotation = Quaternion(-0.71055305, 3.5403414e-08, 2.7838052e-08, 0.7036437)
bones/36/rotation = Quaternion(-0.71055305, -1.4322017e-09, 5.5704813e-08, 0.7036436)
bones/37/rotation = Quaternion(-0.71055305, -4.4375894e-09, -1.4899504e-08, 0.7036437)
bones/38/rotation = Quaternion(-0.71055305, 1.1949165e-08, 1.5968187e-08, 0.7036437)
bones/39/rotation = Quaternion(-0.71055305, -1.4322017e-09, 5.5704813e-08, 0.7036436)
bones/40/rotation = Quaternion(-0.71055305, -1.7845496e-08, -1.4417648e-08, 0.7036437)
bones/41/rotation = Quaternion(-0.71055305, -8.35572e-09, -6.88118e-09, 0.7036437)
bones/42/rotation = Quaternion(-0.18637174, -0.50878596, 0.44160438, 0.71511406)
bones/43/rotation = Quaternion(-0.5002406, 6.7223405e-10, -5.915642e-08, 0.86588645)
bones/44/rotation = Quaternion(-0.5002406, -2.0953856e-07, 3.3116825e-07, 0.86588645)
bones/45/rotation = Quaternion(-0.1863717, -0.5087859, 0.44160452, 0.715114)
bones/46/rotation = Quaternion(-0.71055305, -6.675002e-09, -1.8022138e-09, 0.7036437)
bones/47/rotation = Quaternion(-0.71055305, -2.7011618e-08, 9.401045e-09, 0.7036437)
bones/48/rotation = Quaternion(-0.71055305, -6.675002e-09, -1.8022138e-09, 0.7036437)
bones/49/rotation = Quaternion(-0.71055305, -6.675002e-09, -1.8022138e-09, 0.7036437)
bones/52/position = Vector3(-0.24597198, -0.13598143, 0.3614115)
bones/52/rotation = Quaternion(-0.12196328, -0.57560873, -0.696509, 0.4107003)

[node name="AnimationPlayer" parent="CameraRoot/FallingDisplacement/Arms/first_person_animations_v2" index="1" unique_id=23678671]
process_mode = 3
next/FP_Idle_Pose = &"FP_Idle_Pose"
blend_times = [&"FP_Idle_Pose", &"FP_Idle_Pose", 0.2, &"FP_Idle_Pose", &"FP_Parry_Stance", 0.2, &"FP_Idle_Pose", &"FP_Parry_Success", 0.2, &"FP_Idle_Pose", &"FP_Stretching_Hands", 0.2]

[node name="PlayerMovement" type="Node" parent="." unique_id=2063233654 node_paths=PackedStringArray("body", "vignetteColorRect", "camera_controller")]
script = ExtResource("3_btcbx")
body = NodePath("..")
vignetteColorRect = NodePath("../HUD/Vingette")
camera_controller = NodePath("../CameraRoot")
groundParryResource = ExtResource("6_vtle1")
gravityParryResource = ExtResource("7_gu6f8")
acceleration = 18.94
friction = 24.165

[node name="GravityAudioCue" type="AudioStreamPlayer" parent="PlayerMovement" unique_id=2001744799]

[node name="ParryManager" type="Node" parent="." unique_id=1569983672 node_paths=PackedStringArray("parryTimer", "parryCooldownTimer", "perfectParryPauseTimer", "autoParryTimer", "fpAnimationManager", "normalParrySound", "perfectParrySound", "parryFlash")]
script = ExtResource("6_fhl08")
autoParryWindow = 0.2
parryTimer = NodePath("ParryTimer")
parryCooldownTimer = NodePath("ParryCooldownTimer")
perfectParryPauseTimer = NodePath("PerfectParryPauseTimer")
autoParryTimer = NodePath("AutoParryTimer")
fpAnimationManager = NodePath("../CameraRoot/FallingDisplacement/Arms")
normalParrySound = NodePath("NormalParry")
perfectParrySound = NodePath("PerfectParry")
parryFlash = NodePath("../HUD/ParryFlash")

[node name="ParryTimer" type="Timer" parent="ParryManager" unique_id=70912730]
one_shot = true

[node name="ParryCooldownTimer" type="Timer" parent="ParryManager" unique_id=600414433]
one_shot = true

[node name="PerfectParryPauseTimer" type="Timer" parent="ParryManager" unique_id=1661723924]
process_mode = 3
wait_time = 0.2
one_shot = true

[node name="AutoParryTimer" type="Timer" parent="ParryManager" unique_id=97905244]
one_shot = true

[node name="NormalParry" type="AudioStreamPlayer" parent="ParryManager" unique_id=611038121]
stream = ExtResource("8_00tjw")

[node name="PerfectParry" type="AudioStreamPlayer" parent="ParryManager" unique_id=442353358]
process_mode = 3
stream = ExtResource("9_x3vf3")

[node name="HUD" type="CanvasLayer" parent="." unique_id=1313475167 node_paths=PackedStringArray("blackBars")]
script = ExtResource("10_x3vf3")
blackBars = NodePath("BlackBars")

[node name="ParryFlash" type="ColorRect" parent="HUD" unique_id=2085103949]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(1, 1, 1, 0.30588236)

[node name="BlackBars" type="ColorRect" parent="HUD" unique_id=1688576618]
visible = false
material = SubResource("ShaderMaterial_5htga")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="SpeedLines" type="ColorRect" parent="HUD" unique_id=1547063574]
visible = false
material = SubResource("ShaderMaterial_dkpta")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="SubathonStyleMeter" parent="HUD" unique_id=1089802705 instance=ExtResource("13_p5o4e")]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -312.0
offset_top = 23.0
offset_right = -25.0
offset_bottom = 296.0
grow_horizontal = 0

[node name="Vingette" type="ColorRect" parent="HUD" unique_id=474411812]
visible = false
material = SubResource("ShaderMaterial_lfmf2")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Time" type="Label" parent="HUD" unique_id=960826186]
offset_left = 28.0
offset_top = 20.0
offset_right = 118.0
offset_bottom = 69.0
theme_override_font_sizes/font_size = 35
text = "12.33"
script = ExtResource("16_lfmf2")
start_on_ready = true

[connection signal="tilt" from="PlayerMovement" to="CameraRoot" method="tilt"]
[connection signal="timeout" from="ParryManager/ParryTimer" to="ParryManager" method="_on_parry_timer_timeout"]
[connection signal="timeout" from="ParryManager/ParryCooldownTimer" to="ParryManager" method="_on_parry_cooldown_timer_timeout"]
[connection signal="timeout" from="ParryManager/AutoParryTimer" to="ParryManager" method="_on_auto_parry_timer_timeout"]

[editable path="CameraRoot/FallingDisplacement/Arms/first_person_animations_v2"]
